修改主页部分内容以及php关注者

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!--  
+<!--  
 
 -->
 <!DOCTYPE html>
@@ -71,10 +71,7 @@
 <p>A:关注的是站长，仅用作统计，介意可以取关。</p><hr/>
 <p>Q:为什么点击刷歌打卡只刷了一部分？</p>
 <p>A:这是网易云官方问题,您可以多点击几次。</p><hr/>
-<p>Q:源码在哪里可以下载到？</p>
-<p>A:点击这里：<a href="http://luqiao6.com/ffc8/56af" target="_blank">路桥博客</a>，下载</p><hr/>
-<p>Q:如何修改源码中的自动关注？</p>
-<p>A:修改api.PHP 72行的ID即可。</p>
+
 
       </div>
     </div>
@@ -82,7 +79,7 @@
   </div>
 <div class="panel panel-info">
 <div class="panel-body" style="text-align: center;">
-友情链接：<a href="http://luqiao6.com" target="_blank">路桥博客</a> <script type="text/javascript" src="//js.users.51.la/20691919.js"></script></script><hr/><font color="#9F0021">CopyRight <i class="fa fa-heart text-danger"></i> 2020 | 网易云打卡</font>
+友情链接：<a href="http://luqiao6.com" target="_blank">路桥博客</a> <hr/><a href="hautumnhui.github.com" target="_blank">Autumnhui</a> <hr/>CopyRight <i class="fa fa-heart text-danger"></i> 2020 | 网易云打卡</font>
 </div>
 </div>
 </div>
